# learning-agentic-ai

./: README.md
01_Python_agent_basic/: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
01_Python_agent_basic/Handwrittennotes/: README.md  agent-basics.md  agentic-loop.md  tool-calling.md
01_Python_agent_basic/StickyNotes/: common-confusions.md  remember-these-concepts.md
01_Python_agent_basic/docs/: 01-from-python-program-to-ai-agent.md  02-understanding-tools.md  03-how-the-model-selects-a-tool.md  04-understanding-the-agentic-loop.md  05-conversation-history-and-memory.md  06-complete-code-walkthrough.md  07-guided-practice.md
01_Python_agent_basic/references/: source-map.md
01_Python_agent_basic/visualizationDiagram/: agent-components.md  complete-agent-loop.md  message-history-growth.md  tool-calling-sequence.md
05-langchain-model-layer/: README.md  pyproject.toml
05-langchain-model-layer/Handwrittennotes/: 01-interface-and-config.md  02-messages.md  03-execution-modes.md  04-tools.md  05-typed-output.md  06-context.md  README.md
05-langchain-model-layer/StickyNotes/: 01-binding-is-not-execution.md  02-batch-is-not-provider-batch.md  03-valid-is-not-true.md  04-max-tokens-is-not-context.md
05-langchain-model-layer/docs/: 01-the-model-interface.md  02-configuring-a-model-call.md  03-messages-are-the-conversation.md  04-invocation-streaming-and-batching.md  05-tool-binding-is-not-tool-execution.md  06-typed-output-and-context-control.md  references.md
05-langchain-model-layer/examples/: 01_init_and_config.py  02_messages_and_metadata.py  03_invoke_stream_batch.py  04_bind_tools_manual_loop.py  05_structured_output.py  06_context_summary_pattern.py
05-langchain-model-layer/tests/: test_examples_are_syntax_valid.py
(+64 files in other folders)
