[project]
name = "verbose-tool-agent"
version = "0.2.0"
description = "A single-file teaching example that makes an LLM tool-calling loop visible."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dhyey" }]
dependencies = [
    "dotenv>=0.9.9",
    "openai>=1.109.0,<3",
    "python-dotenv>=1.1.0,<2",
]

[dependency-groups]
dev = ["ruff>=0.12.0,<1"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.uv]
package = false
